--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ snow = "0.9"
 rustls = { version = "0.20", features = ["dangerous_configuration"] } # only types are used
 tokio = { version = "1.20", features = ["full"] }
 tokio-rustls = "0.23"
+lazy_static = "1.4.0"
+anyhow = "1.0.62"
+structopt = "0.3.26"
+clap = "3.2.18"
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
