use tracing for log

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ clap = "3.2.18"
 futures = "0.3"
 rand = "0.8.5"
 blake2 = "0.10.4"
+tracing = "0.1.36"
+env_logger = "0.9.0"
+tracing-subscriber = "0.3.15"
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
