--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ blake2 = "0.10.4"
 tracing = "0.1.36"
 env_logger = "0.9.0"
 tracing-subscriber = "0.3.15"
+lru = "0.7.8"
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
