--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tracing = "0.1.36"
 env_logger = "0.9.0"
 tracing-subscriber = "0.3.15"
 lru = "0.7.8"
+totp-rs = "3.0.1"
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
