implement adaptive prelighter with bounds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,16 @@ tokio-rustls = "0.23"
 lazy_static = "1.4"
 anyhow = "1.0"
 structopt = "0.3"
-clap = "3.2.18"
+clap = "3.2"
 futures = "0.3"
-rand = "0.8.5"
-blake2 = "0.10.4"
-tracing = "0.1.36"
-env_logger = "0.9.0"
-tracing-subscriber = "0.3.15"
-lru = "0.7.8"
-totp-rs = "3.0.1"
+rand = "0.8"
+blake2 = "0.10"
+tracing = "0.1"
+env_logger = "0.9"
+tracing-subscriber = "0.3"
+lru = "0.7"
+totp-rs = "3.0"
+deadqueue = { version = "0.2.3", features = ["resizable"] }
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
