--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,10 @@
-[package]
-edition = "2021"
-name = "noisy-shuttle"
-version = "0.1.0"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-hex-literal = "0.3"
-snow = "0.9"
-rustls = { version = "0.20", features = ["dangerous_configuration"] }
-tokio = { version = "1.20", features = ["full"] }
-tokio-rustls = "0.23"
-lazy_static = "1.4"
-anyhow = "1.0"
-structopt = "0.3"
-clap = "3.2"
-futures = "0.3"
-rand = "0.8"
-blake2 = "0.10"
-tracing = "0.1"
-env_logger = "0.9"
-tracing-subscriber = "0.3"
-lru = "0.7"
-totp-rs = "3.0"
-deadqueue = { version = "0.2.3", features = ["resizable"] }
+members = [
+    "snowy-tunnel",
+    # "adder",
+    # "add_one",
+]
 
 [patch.crates-io]
 rustls = { git = "https://github.com/gowee/rustls-mod.git" }
