--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -15,4 +15,4 @@ tracing-subscriber = "0.3"
 lru = "0.7"
 snowy-tunnel = { path = "../snowy-tunnel" }
 deadqueue = { version = "0.2", features = ["resizable"] }
-ja3-rustls = { version = "0.0" }
+ja3-rustls = { version = "0.0", path= "../../ja3-rustls" }
