--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -13,6 +13,6 @@ clap = "3.2"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 lru = "0.7"
-snowy-tunnel = { path = "../snowy-tunnel" }
+snowy-tunnel = { path = "../tunnel" }
 deadqueue = { version = "0.2", features = ["resizable"] }
-ja3-rustls = { version = "0.0", path= "../../ja3-rustls", features = ["rand"] }
+ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git" }
