refactor(cli): seperate out client and server

--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = "1.21"
+futures = "0.3"
 anyhow = "1.0"
 structopt = "0.3"
 clap = "3.2"
@@ -16,3 +17,4 @@ lru = "0.7"
 snowy-tunnel = { path = "../tunnel" }
 deadqueue = { version = "0.2", features = ["resizable"] }
 ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git" }
+async-trait = "0.1.57"
