--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -19,3 +19,6 @@ deadqueue = { version = "0.2", features = ["resizable"] }
 ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git" }
 async-trait = "0.1.57"
 rand = "0.8"
+num-traits = "0.2"
+num-derive = "0.3"
+socks5-protocol = { version = "0.3", features = [] }
