feat: implement a simple local resolution cache

--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -22,4 +22,4 @@ rand = "0.8"
 num-traits = "0.2"
 num-derive = "0.3"
 socks5-protocol = { version = "0.3", features = ["sync"] }
-httparse = { version = "1.8" }
+httparse = "1.8"
