--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1.0"
 structopt = "0.3"
 clap = "3.2"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
 lru = "0.7"
 snowy-tunnel = { path = "../tunnel" }
 deadqueue = { version = "0.2", features = ["resizable"] }
