--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ members = [
 
 [patch.crates-io]
 # rustls = { path = "../rustls-mod/rustls" }
-rustls = { git = "https://github.com/gowee/rustls-mod.git" }
+rustls = { git = "https://github.com/gowee/rustls-patched.git" }
