--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -32,3 +32,4 @@ derive_more = { version= "0.99.17", features = ["deref", "deref_mut"] }
 snowy-tunnel = { path = "../tunnel" }
 async-once-cell = "0.4.2"
 futures-util = "0.3.24"
+tokio-yamux = "0.3.7"
