--- a/tunnel/Cargo.toml
+++ b/tunnel/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4"
 futures = "0.3"
 rand = "0.8"
 blake2 = "0.10"
+hmac = "0.12"
 tracing = "0.1"
 lru = "0.7"
 ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git", features = ["rand"] }
