--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "noisy-shuttle"
-version = "0.2.1"
+name = "noisy-shuttle-sm"
+version = "0.2.1-sm"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
