--- a/tunnel/Cargo.toml
+++ b/tunnel/Cargo.toml
@@ -19,3 +19,4 @@ tracing = "0.1"
 lru = "0.7"
 ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git", features = ["rand"] }
 itertools = "0.10"
+derivative = "2.2.0"
