--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ members = [
 ]
 
 [patch.crates-io]
-# rustls = { path = "../rustls-mod/rustls" }
-rustls = { git = "https://github.com/gowee/rustls-patched.git" }
+rustls = { path = "./rustls-patched/rustls" }
+
