--- a/tunnel/Cargo.toml
+++ b/tunnel/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 [dependencies]
 hex-literal = "0.3"
 snow = "0.9"
-rustls = { version = "0.20", features = ["dangerous_configuration"] }
+rustls = { version = "*", features = ["dangerous_configuration"] }
 tokio = { version = "1.20", features = ["full"] }
 lazy_static = "1.4"
 futures = "0.3"
@@ -18,3 +18,4 @@ tracing = "0.1"
 lru = "0.7"
 ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git", features = ["rand"] }
 itertools = "0.10"
+
