feat(shuttle): patch for h2mux

--- a/shuttle/Cargo.toml
+++ b/shuttle/Cargo.toml
@@ -22,7 +22,8 @@ num-traits = "0.2"
 num-derive = "0.3"
 socks5-protocol = { version = "0.3", features = ["sync"] }
 httparse = "1.8"
+structopt-flags = "0.3.6"
+bytes = "*"
 
 snowy-tunnel = { path = "../tunnel" }
-structopt-flags = "0.3.6"
-
+h2mux = { path = "../h2mux" }
